Fix large file and large path handling in build tar creatin